completed login automation and started data driven test

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,7 @@
 url=https://tutorialsninja.com/demo/
 firstname=Prakhar
 lastname=Maheshwari
+email=prakharmaheshwari96@gmail.com
 password=Prakhar@123
 confirmPassword=Prakhar@123
 phoneno=7017909094
